--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.craftingstore</groupId>
+    <parent>
+        <groupId>net.craftingstore</groupId>
+        <artifactId>craftingstore</artifactId>
+        <version>${revision}</version>
+    </parent>
+
     <artifactId>bukkit</artifactId>
-    <version>2.3.1-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -18,6 +22,12 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
     <repositories>
