--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,9 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.craftingstore</groupId>
+    <parent>
+        <groupId>net.craftingstore</groupId>
+        <artifactId>craftingstore</artifactId>
+        <version>${revision}</version>
+    </parent>
+
     <artifactId>core</artifactId>
-    <version>2.3.1-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
