--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,12 @@
     <groupId>net.craftingstore</groupId>
     <artifactId>craftingstore</artifactId>
     <packaging>pom</packaging>
-    <version>2.3.1-SNAPSHOT</version>
+    <version>${revision}</version>
+
+    <properties>
+        <revision>${craftingstore-version}-RELEASE</revision>
+        <craftingstore-version>2.4.0</craftingstore-version>
+    </properties>
 
     <modules>
         <module>core</module>
